<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/bottom_navigation_height"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/fragment_sale_list_sort_by_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_sale_list_sort_by_spinner"
        app:layout_constraintTop_toBottomOf="@+id/fragment_clazz_log_list_line_chart_selector_ll" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fragment_sale_list_sort_by_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_clazz_log_list_line_chart_selector_ll" />

    <com.google.android.material.appbar.AppBarLayout android:id="@+id/activity_sale_list_appbar"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:elevation="4dp" android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/fragment_clazz_log_list_line_chart_selector_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/fragment_sale_list_filter_all_sales_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginTop="0dp"
                android:background="@drawable/badge_circle"
                android:text="20"
                android:textColor="@color/primary_text"
                android:textSize="8sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fragment_sale_list_filter_all_sales"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_button_selector"
                android:text="@string/all_sales"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/fragment_sale_list_filter_pre_orders_counter"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:background="@drawable/badge_circle"
                android:elevation="@dimen/dimen_4dp"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/background_light"
                android:textSize="8sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/fragment_sale_list_filter_pre_orders"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_button_selector"
                android:text="@string/pre_orders"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/fragment_sale_list_filter_payments_due_counter"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:background="@drawable/badge_circle"
                android:elevation="@dimen/dimen_4dp"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/background_light"
                android:textSize="8sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/fragment_sale_list_filter_payments_due"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button_selector"
                android:paddingLeft="@dimen/dimen_8dp"
                android:paddingRight="@dimen/dimen_8dp"
                android:text="@string/payments_due"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_sale_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/activity_sale_list_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sale_list_sort_by_tv" />

    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/activity_sale_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:floating_background_color="@color/fab"
        app:floating_left_icon="@drawable/ic_add_black_24dp"
        app:floating_title="@string/record_sale"
        app:floating_title_color="@color/fab_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>